--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "bootstrap": "^4.1.3",
     "express": "^4.16.4",
+    "jquery": "^3.3.1",
     "mongoose": "^5.3.14"
   }
 }
